ToonStream v1.0.0: Production-ready release with complete rebranding from ToonLib
- Rebranded from ToonLib to ToonStream across all files
- 100% test coverage (51 tests passing)
- 38-55% token reduction validated on real-world datasets
- Zero dependencies, pure Python implementation
- Complete documentation and examples
- GitHub Actions workflow for auto-publishing
- Updated README with live PyPI and GitHub links
- Cleaned up build artifacts and temporary files
- Ready for PyPI publication

--- a/examples/toonstream_tutorial.ipynb
+++ b/examples/toonstream_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f8c50204",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
    ],
    "source": [
     "# Import the library\n",
-    "import toonlib\n",
+    "import toonstream\n",
     "import json"
    ]
   },
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "# Encode to TOON format (compact)\n",
-    "toon_compact = toonlib.encode(simple_data, indent=0)\n",
+    "toon_compact = toonstream.encode(simple_data, indent=0)\n",
     "\n",
     "print(\"TOON format (compact):\")\n",
     "print(toon_compact)"
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "# Encode to TOON format (pretty-printed)\n",
-    "toon_pretty = toonlib.encode(simple_data, indent=2)\n",
+    "toon_pretty = toonstream.encode(simple_data, indent=2)\n",
     "\n",
     "print(\"TOON format (pretty):\")\n",
     "print(toon_pretty)"
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "# Decode back to Python\n",
-    "decoded = toonlib.decode(toon_pretty)\n",
+    "decoded = toonstream.decode(toon_pretty)\n",
     "\n",
     "print(\"Decoded back to Python:\")\n",
     "print(decoded)\n",
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "# Encode to TOON - see the tabular format\n",
-    "toon_employees = toonlib.encode(employees, indent=2)\n",
+    "toon_employees = toonstream.encode(employees, indent=2)\n",
     "\n",
     "print(\"TOON format (tabular):\")\n",
     "print(toon_employees)"
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "# Decode back - lossless conversion\n",
-    "decoded_employees = toonlib.decode(toon_employees)\n",
+    "decoded_employees = toonstream.decode(toon_employees)\n",
     "\n",
     "print(\"Decoded successfully:\")\n",
     "print(f\"Lossless: {employees == decoded_employees}\")"
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "# Encode to TOON\n",
-    "toon_company = toonlib.encode(company_data, indent=2)\n",
+    "toon_company = toonstream.encode(company_data, indent=2)\n",
     "\n",
     "print(\"TOON format:\")\n",
     "print(toon_company)"
@@ -261,7 +261,7 @@
    "outputs": [],
    "source": [
     "# Decode and verify\n",
-    "decoded_company = toonlib.decode(toon_company)\n",
+    "decoded_company = toonstream.decode(toon_company)\n",
     "\n",
     "print(f\"Lossless conversion: {company_data == decoded_company}\")"
    ]
@@ -284,7 +284,7 @@
    "outputs": [],
    "source": [
     "# Import the optimized encoder\n",
-    "from toonlib.encoder_optimized import encode_optimized\n",
+    "from toonstream.encoder_optimized import encode_optimized\n",
     "\n",
     "# Small array (not worth tabular format)\n",
     "small_array = {\n",
@@ -295,7 +295,7 @@
     "}\n",
     "\n",
     "# Standard encoder (always uses tabular)\n",
-    "toon_standard = toonlib.encode(small_array, indent=2)\n",
+    "toon_standard = toonstream.encode(small_array, indent=2)\n",
     "print(\"Standard encoder (always tabular):\")\n",
     "print(toon_standard)\n",
     "print()\n",
@@ -324,7 +324,7 @@
    "outputs": [],
    "source": [
     "# Import the ToonEncoder class\n",
-    "from toonlib import ToonEncoder\n",
+    "from toonstream import ToonEncoder\n",
     "\n",
     "# Small array (not worth tabular format)\n",
     "small_array = {\n",
@@ -375,8 +375,8 @@
     "\n",
     "print(\"Testing edge cases:\")\n",
     "for key, value in edge_cases.items():\n",
-    "    toon = toonlib.encode(value, indent=0)\n",
-    "    decoded = toonlib.decode(toon)\n",
+    "    toon = toonstream.encode(value, indent=0)\n",
+    "    decoded = toonstream.decode(toon)\n",
     "    match = \"✓\" if value == decoded or (value is None and decoded is None) else \"✗\"\n",
     "    print(f\"  {match} {key}: {repr(value)} → {toon} → {repr(decoded)}\")"
    ]
@@ -396,8 +396,8 @@
     "    \"unicode_🚀\": \"value_🎉\"\n",
     "}\n",
     "\n",
-    "toon = toonlib.encode(special_chars, indent=0)\n",
-    "decoded = toonlib.decode(toon)\n",
+    "toon = toonstream.encode(special_chars, indent=0)\n",
+    "decoded = toonstream.decode(toon)\n",
     "print(f\"Special characters preserved: {special_chars == decoded}\")"
    ]
   },
@@ -433,7 +433,7 @@
     "    json_pretty_tokens = len(encoder.encode(json_pretty))\n",
     "    \n",
     "    # TOON\n",
-    "    toon_str = toonlib.encode(data, indent=0)\n",
+    "    toon_str = toonstream.encode(data, indent=0)\n",
     "    toon_tokens = len(encoder.encode(toon_str))\n",
     "    \n",
     "    # Calculate savings\n",
