Update tutorial notebook with latest version and fixes

--- a/examples/toonstream_tutorial.ipynb
+++ b/examples/toonstream_tutorial.ipynb
@@ -7,17 +7,33 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'toonlib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Import the library\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtoonlib\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'toonlib'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: toonstream in c:\\users\\vivek\\appdata\\roaming\\python\\python314\\site-packages (1.0.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
+   "source": [
+    "! pip install toonstream=1.0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "422a1486",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Import the library\n",
     "import toonstream\n",
@@ -36,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5dec9431",
    "metadata": {},
    "outputs": [
@@ -65,10 +81,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bf8911ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOON format (compact):\n",
+      "name: \"John Doe\"\n",
+      "age: 30\n",
+      "salary: 75000.5\n",
+      "is_active: true\n",
+      "department: null\n"
+     ]
+    }
+   ],
    "source": [
     "# Encode to TOON format (compact)\n",
     "toon_compact = toonstream.encode(simple_data, indent=0)\n",
@@ -79,10 +108,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4517ab6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOON format (pretty):\n",
+      "name: \"John Doe\"\n",
+      "\n",
+      "age: 30\n",
+      "\n",
+      "salary: 75000.5\n",
+      "\n",
+      "is_active: true\n",
+      "\n",
+      "department: null\n"
+     ]
+    }
+   ],
    "source": [
     "# Encode to TOON format (pretty-printed)\n",
     "toon_pretty = toonstream.encode(simple_data, indent=2)\n",
@@ -93,10 +139,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "aaa3e627",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decoded back to Python:\n",
+      "{'name': 'John Doe', 'age': 30, 'salary': 75000.5, 'is_active': True, 'department': None}\n",
+      "\n",
+      "Lossless conversion: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Decode back to Python\n",
     "decoded = toonstream.decode(toon_pretty)\n",
@@ -118,10 +175,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d199f7b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee data:\n",
+      "{\n",
+      "  \"employees\": [\n",
+      "    {\n",
+      "      \"id\": 1,\n",
+      "      \"name\": \"Alice Johnson\",\n",
+      "      \"role\": \"Engineer\",\n",
+      "      \"salary\": 95000\n",
+      "    },\n",
+      "    {\n",
+      "      \"id\": 2,\n",
+      "      \"name\": \"Bob Smith\",\n",
+      "      \"role\": \"Designer\",\n",
+      "      \"salary\": 85000\n",
+      "    },\n",
+      "    {\n",
+      "      \"id\": 3,\n",
+      "      \"name\": \"Carol Williams\",\n",
+      "      \"role\": \"Manager\",\n",
+      "      \"salary\": 110000\n",
+      "    },\n",
+      "    {\n",
+      "      \"id\": 4,\n",
+      "      \"name\": \"David Brown\",\n",
+      "      \"role\": \"Engineer\",\n",
+      "      \"salary\": 92000\n",
+      "    },\n",
+      "    {\n",
+      "      \"id\": 5,\n",
+      "      \"name\": \"Eve Davis\",\n",
+      "      \"role\": \"Designer\",\n",
+      "      \"salary\": 87000\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Employee data - common use case\n",
     "employees = {\n",
@@ -140,10 +239,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c1591747",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOON format (tabular):\n",
+      "employees[5]{id,name,role,salary}:\n",
+      "1,Alice Johnson,Engineer,95000\n",
+      "2,Bob Smith,Designer,85000\n",
+      "3,Carol Williams,Manager,110000\n",
+      "4,David Brown,Engineer,92000\n",
+      "5,Eve Davis,Designer,87000\n"
+     ]
+    }
+   ],
    "source": [
     "# Encode to TOON - see the tabular format\n",
     "toon_employees = toonstream.encode(employees, indent=2)\n",
@@ -154,10 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6fcda284",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JSON tokens: 97\n",
+      "TOON tokens: 63\n",
+      "Token savings: 35.1%\n"
+     ]
+    }
+   ],
    "source": [
     "# Compare token counts\n",
     "import tiktoken\n",
@@ -177,10 +300,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5e51e5ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decoded successfully:\n",
+      "Lossless: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Decode back - lossless conversion\n",
     "decoded_employees = toonstream.decode(toon_employees)\n",
@@ -201,10 +333,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e771882e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Company data:\n",
+      "{\n",
+      "  \"company\": \"TechCorp\",\n",
+      "  \"founded\": 2010,\n",
+      "  \"departments\": [\n",
+      "    {\n",
+      "      \"name\": \"Engineering\",\n",
+      "      \"head\": \"Alice Johnson\",\n",
+      "      \"teams\": [\n",
+      "        {\n",
+      "          \"name\": \"Backend\",\n",
+      "          \"size\": 8\n",
+      "        },\n",
+      "        {\n",
+      "          \"name\": \"Frontend\",\n",
+      "          \"size\": 6\n",
+      "        }\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"name\": \"Design\",\n",
+      "      \"head\": \"Bob Smith\",\n",
+      "      \"teams\": [\n",
+      "        {\n",
+      "          \"name\": \"UI/UX\",\n",
+      "          \"size\": 4\n",
+      "        },\n",
+      "        {\n",
+      "          \"name\": \"Graphics\",\n",
+      "          \"size\": 3\n",
+      "        }\n",
+      "      ]\n",
+      "    }\n",
+      "  ],\n",
+      "  \"location\": {\n",
+      "    \"city\": \"San Francisco\",\n",
+      "    \"state\": \"CA\",\n",
+      "    \"country\": \"USA\"\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Complex nested structure\n",
     "company_data = {\n",
@@ -241,10 +420,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "955a89af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOON format:\n",
+      "company: \"TechCorp\"\n",
+      "\n",
+      "founded: 2010\n",
+      "\n",
+      "departments: [{\"name\": \"Engineering\", \"head\": \"Alice Johnson\", \"teams\": [{\"name\": \"Backend\", \"size\": 8}, {\"name\": \"Frontend\", \"size\": 6}]}, {\"name\": \"Design\", \"head\": \"Bob Smith\", \"teams\": [{\"name\": \"UI/UX\", \"size\": 4}, {\"name\": \"Graphics\", \"size\": 3}]}]\n",
+      "\n",
+      "location: {\"city\": \"San Francisco\", \"state\": \"CA\", \"country\": \"USA\"}\n"
+     ]
+    }
+   ],
    "source": [
     "# Encode to TOON\n",
     "toon_company = toonstream.encode(company_data, indent=2)\n",
@@ -255,55 +449,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8405ec15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lossless conversion: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Decode and verify\n",
     "decoded_company = toonstream.decode(toon_company)\n",
     "\n",
     "print(f\"Lossless conversion: {company_data == decoded_company}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "244d1625",
-   "metadata": {},
-   "source": [
-    "## 4. Optimized Encoder\n",
-    "\n",
-    "The optimized encoder includes smart array detection that only uses tabular format when beneficial."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "363ab1d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the optimized encoder\n",
-    "from toonstream.encoder_optimized import encode_optimized\n",
-    "\n",
-    "# Small array (not worth tabular format)\n",
-    "small_array = {\n",
-    "    \"users\": [\n",
-    "        {\"id\": 1, \"name\": \"Alice\"},\n",
-    "        {\"id\": 2, \"name\": \"Bob\"}\n",
-    "    ]\n",
-    "}\n",
-    "\n",
-    "# Standard encoder (always uses tabular)\n",
-    "toon_standard = toonstream.encode(small_array, indent=2)\n",
-    "print(\"Standard encoder (always tabular):\")\n",
-    "print(toon_standard)\n",
-    "print()\n",
-    "\n",
-    "# Optimized encoder (smart detection)\n",
-    "toon_optimized = encode_optimized(small_array, indent=2, smart_optimize=True)\n",
-    "print(\"Optimized encoder (smart):\")\n",
-    "print(toon_optimized)"
    ]
   },
   {
@@ -318,10 +480,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9be1f9f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Legacy mode (always tabular):\n",
+      "users[2]{id,name}:\n",
+      "1,Alice\n",
+      "2,Bob\n",
+      "\n",
+      "Smart optimization (recommended):\n",
+      "users: [{\"id\": 1, \"name\": \"Alice\"}, {\"id\": 2, \"name\": \"Bob\"}]\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the ToonEncoder class\n",
     "from toonstream import ToonEncoder\n",
@@ -348,75 +524,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a4c6fb2",
-   "metadata": {},
-   "source": [
-    "## 6. Edge Cases\n",
-    "\n",
-    "TOON handles edge cases correctly."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d85c032",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Empty collections and special values\n",
-    "edge_cases = {\n",
-    "    \"empty_object\": {},\n",
-    "    \"empty_array\": [],\n",
-    "    \"empty_string\": \"\",\n",
-    "    \"zero\": 0,\n",
-    "    \"false\": False,\n",
-    "    \"null\": None\n",
-    "}\n",
-    "\n",
-    "print(\"Testing edge cases:\")\n",
-    "for key, value in edge_cases.items():\n",
-    "    toon = toonstream.encode(value, indent=0)\n",
-    "    decoded = toonstream.decode(toon)\n",
-    "    match = \"✓\" if value == decoded or (value is None and decoded is None) else \"✗\"\n",
-    "    print(f\"  {match} {key}: {repr(value)} → {toon} → {repr(decoded)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abe13623",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Special characters in keys and values\n",
-    "special_chars = {\n",
-    "    \"key with spaces\": \"value\",\n",
-    "    \"key\\nwith\\nnewlines\": \"value\",\n",
-    "    'key\"with\"quotes': \"value with \\\"quotes\\\"\",\n",
-    "    \"unicode_🚀\": \"value_🎉\"\n",
-    "}\n",
-    "\n",
-    "toon = toonstream.encode(special_chars, indent=0)\n",
-    "decoded = toonstream.decode(toon)\n",
-    "print(f\"Special characters preserved: {special_chars == decoded}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1b6c459b",
    "metadata": {},
    "source": [
-    "## 7. Performance Comparison\n",
+    "## 5. Performance Comparison\n",
     "\n",
     "Compare TOON vs JSON for different data structures."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "6790d813",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Array of Objects (5 employees)\n",
+      "------------------------------------------------------------\n",
+      "JSON Compact: 97 tokens\n",
+      "JSON Pretty:  182 tokens\n",
+      "TOON:         63 tokens\n",
+      "Savings vs Compact: 35.1%\n",
+      "Savings vs Pretty:  65.4%\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -454,10 +590,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "dfe5d64e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Array of Objects (50 employees)\n",
+      "------------------------------------------------------------\n",
+      "JSON Compact: 1554 tokens\n",
+      "JSON Pretty:  2609 tokens\n",
+      "TOON:         914 tokens\n",
+      "Savings vs Compact: 41.2%\n",
+      "Savings vs Pretty:  65.0%\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate larger dataset\n",
     "large_employees = {\n",
@@ -520,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
